hard-gists/cb5a28fa8d4db3fc1ba51894663c1aed/run.log
=== Docker Run Log for cb5a28fa8d4db3fc1ba51894663c1aed ===
Started at: Mi 29. Okt 20:17:13 CET 2025

[2025-10-29 20:17:13] START: Running container for cb5a28fa8d4db3fc1ba51894663c1aed
[2025-10-29 20:17:14] SUCCESS: Container 412a6fb8cee36a3a4b25bb7aa34052f1b2f24a522f3ad2ec000ceaf7c4287927 started for cb5a28fa8d4db3fc1ba51894663c1aed
=== Container logs for cb5a28fa8d4db3fc1ba51894663c1aed ===
  File "/snippet.py", line 43
    print "Failed to open WebSocket."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cb5a28fa8d4db3fc1ba51894663c1aed ===
[2025-10-29 20:17:16] INFO: Container 412a6fb8cee36a3a4b25bb7aa34052f1b2f24a522f3ad2ec000ceaf7c4287927 has stopped
